--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,21 @@
+body {
+  box-sizing: border-box;
+  margin: auto;
+  padding: auto;
+  background-color: black;
+}
 .card {
   width: 90px;
   height: 50px;
   display: inline-block;
   margin-left: 1rem;
+}
+nav {
+  margin-bottom: 2rem;
+  margin-top: 1rem;
+  background-color: rgb(168, 128, 27);
+}
+#gameTitle {
+  font-size: 45px;
+  color: black;
 }
