--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@ body {
   background-color: black;
 }
 .card {
-  width: 90px;
+  width: 60px;
   height: 50px;
   display: inline-block;
   margin-left: 1rem;
@@ -14,8 +14,26 @@ nav {
   margin-bottom: 2rem;
   margin-top: 1rem;
   background-color: rgb(168, 128, 27);
+  height: 5rem;
+}
+#introA {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+#introA:hover {
+  background-color: goldenrod;
 }
 #gameTitle {
-  font-size: 45px;
+  font-size: 60px;
   color: black;
+  font-weight: bold;
+}
+#instructionsDisplayed {
+  margin-left: 15rem;
+}
+#gameCasesEl {
+  margin: 0 0.5rem;
+}
+#moneyAmountTable {
+  width: 200px;
 }
