--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,23 +14,33 @@ nav {
   margin-bottom: 2rem;
   margin-top: 1rem;
   background-color: rgb(168, 128, 27);
-  height: 5rem;
+  height: 8rem;
+  background-image: url(../images/bgnav.jfif);
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+  -o-background-size: cover;
+  background-position: center;
 }
 #introA {
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
+  margin: 2rem 3rem;
+  color: black;
+  font-weight: bold;
+  font-size: 20px;
 }
-#introA:hover {
+#introA:hover,
+#gameTitle:hover {
+  font-weight: bolder;
+  color: black;
   background-color: goldenrod;
 }
 #gameTitle {
   font-size: 60px;
   color: black;
   font-weight: bold;
+  margin: 1.5rem 2rem;
 }
-#instructionsDisplayed {
-  margin-left: 15rem;
-}
+
 #gameCasesEl {
   margin: 0 0.5rem;
 }
