--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,6 +45,18 @@ h2 {
   -o-background-size: cover;
   background-position: center;
 }
+
+.unchosen-case {
+  display: none;
+}
+
+.chosen-case {
+  display: block;
+}
+.players-case {
+  visibility: hidden;
+}
+
 /*Navigation Style*/
 nav {
   margin-bottom: 2rem;
