--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@ body {
   box-sizing: border-box;
   margin: auto;
   padding: auto;
-  background-color: black;
+  background-color: rgba(8, 7, 7, 0.884);
 }
 /*Text Style*/
 p {
@@ -18,6 +18,7 @@ li {
 h2 {
   font-size: 40px;
   color: whitesmoke;
+  margin-top: 0.5rem;
 }
 /*Style for Instructions*/
 .instructions-bg {
@@ -82,7 +83,8 @@ nav {
   font-size: 70px;
   color: black;
   font-weight: bold;
-  margin: 1.5rem 2rem;
+  margin: 1.5rem;
+  margin-left: auto;
 }
 /*Style for Money Amount Table*/
 #moneyAmountTable {
@@ -99,5 +101,5 @@ nav {
 .signin-btn:hover {
   font-weight: bolder;
   color: black;
-  background-color: goldenrod;
+  background-color: rgba(172, 172, 172, 0.842);
 }
