created a Google Sign in api jsassets/js/store.js

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,7 @@ p {
   font-weight: bold;
   color: rgba(250, 230, 115, 0.726);
 }
+
 li {
   padding-bottom: 0.5rem;
   color: white;
@@ -20,6 +21,90 @@ h2 {
   color: whitesmoke;
   margin-top: 0.5rem;
 }
+
+/*Style for NavBar*/
+nav {
+  margin-bottom: 2rem;
+  margin-top: 1rem;
+  background-color: transparent;
+  height: 8rem;
+  background-image: url(../images/bgnav.jpeg);
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+  -o-background-size: cover;
+  background-position: center;
+}
+#introBtn {
+  height: 2rem;
+  margin: 5.5rem 0.5rem;
+  background-color: transparent;
+  font-weight: bold;
+  color: black;
+  display: "none";
+}
+.introTxt {
+  font-size: 20px;
+  color: black;
+}
+.signout-btn-game {
+  height: 2rem;
+  margin: 5.5rem 0.5rem;
+  background-color: transparent;
+  color: black;
+  font-weight: bold;
+  font-size: 20px;
+}
+.play-btn,
+.pause-btn,
+.resume-btn,
+.stop-btn {
+  height: 2rem;
+  margin: 5.5rem 0.5rem;
+  background-color: transparent;
+  color: black;
+}
+.icon-resume,
+.icon-play,
+.icon-pause,
+.icon-stop {
+  margin: -40px 0;
+}
+#icon {
+  font-size: 18px;
+}
+#add-music {
+  height: 2rem;
+  margin: 5.5rem 0.5rem;
+  background-color: transparent;
+  color: black;
+}
+#music-input {
+  height: 2rem;
+  margin: 5.5rem 0.5rem;
+  background-color: rgba(255, 248, 182, 0.712);
+  display: block;
+  color: black;
+  width: 8rem;
+}
+
+#gameTitle:hover,
+#introBtn:hover,
+#add-music:hover,
+.signout-btn-game:hover,
+.play-btn:hover,
+.pause-btn:hover,
+.resume-btn:hover,
+.stop-btn:hover {
+  opacity: 0.7;
+}
+
+#gameTitle {
+  font-size: 70px;
+  color: black;
+  font-weight: bold;
+  margin: 1rem;
+}
 /*Style for Instructions*/
 .instructions-bg {
   background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.8)),
@@ -29,6 +114,7 @@ h2 {
   background-size: cover;
   -o-background-size: cover;
   background-position: center;
+  padding: 0 1rem;
 }
 /*Cards Style*/
 .card {
@@ -46,72 +132,11 @@ h2 {
   -o-background-size: cover;
   background-position: center;
 }
-/*Navigation Style*/
-nav {
-  margin-bottom: 2rem;
-  margin-top: 1rem;
-  background-color: transparent;
-  height: 8rem;
-  background-image: url(../images/bgnav.jpeg);
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  background-size: cover;
-  -o-background-size: cover;
-  background-position: center;
-}
-#introA {
-  margin: 2rem 3rem;
-  color: black;
-  font-weight: bold;
-  font-size: 20px;
-}
-.signout-btn-game {
-  height: 2rem;
-  margin: 3rem 4rem;
-  background-color: transparent;
-  color: black;
-  font-weight: bold;
-  font-size: 20px;
-}
-.play-btn,
-.pause-btn,
-.resume-btn,
-.stop-btn {
-  height: 2rem;
-  margin: 3rem 1rem;
-  background-color: transparent;
-  color: black;
-}
-.icon-resume,
-.icon-play,
-.icon-pause,
-.icon-stop {
-  margin: -40px 0;
-}
-#icon {
-  font-size: 18px;
-}
-#gameTitle:hover,
-#introA:hover,
-.signout-btn-game:hover,
-.play-btn:hover,
-.pause-btn:hover,
-.resume-btn:hover,
-.stop-btn:hover {
-  opacity: 0.7;
-}
-
-#gameTitle {
-  font-size: 70px;
-  color: black;
-  font-weight: bold;
-  margin: 1.5rem;
-  margin-left: auto;
-}
 /*Style for Money Amount Table*/
 #moneyAmountTable {
   width: 200px;
 }
+
 /*Style for sign in and sign out btns on intro page*/
 .signin-btn,
 .guest-btn {
