--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -108,6 +108,10 @@ nav {
   width: 200px;
 }
 
+[data-inplay="no"]{
+  text-decoration: line-through;
+}
+
 /*Style for Deal, No Deal Buttons*/
 [data-offer="no"] {
   pointer-events: none;
