--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -161,12 +161,7 @@ nav {
   padding: 0 1rem;
 }
 /*Cards(cases) Style*/
-.card {
-  width: 60px;
-  height: 50px;
-  display: inline-block;
-  margin-left: 1rem;
-}
+
 #gameCasesEl {
   margin: 0 0.5rem;
   background-image: url(../images/bgcases.jpeg);
@@ -208,4 +203,10 @@ nav {
   font-weight: bolder;
   color: black;
   background-color: rgba(172, 172, 172, 0.842);
+}
+
+/*Style for Stats Table */
+#stats-table-values {
+  display: none;
+  background-color: white;
 }
